<resources>
    <string name="app_name">America: An eGuide</string>
    <string name="americaTheEGuide">America: The eGuide</string>
    <string name="beginAmericanization">CLICK THE ARROW TO BEGIN YOUR AMERICANIZAITON (Definitely not clickbait)</string>
    <string name="manWearingTurban">👳🏽‍♂️</string>
    <string name="womenWearingHandkerchief">🧕🏻</string>
    <string name="americaChooseWhoYouAre">America: Choose Who You Are</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">STATUS</string>
    <string name="americaPickCreed">America: Choose Your Creed</string>
    <string name="americaGoBackToThe80s">America: Go Back to the 80s</string>
    <string name="americaGetACollegeEducation">America: You Could Get A College Education</string>
    <string name="noCollegeDegree">No College Degree</string>
    <string name="americaGetAJob">America: Get a Job</string>
    <string name="getSomeEightiesRemake">Pay for Some 80\'s Remake</string>
    <string name="americaHomeSweetHomeQuestionMark">America: Home Sweet Home?</string>
    <string name="withParents">With Parents!</string>
    <string name="aHouse">Get a house...!?</string>
    <string name="cohousing">Cohousing/With Others/Communities</string>
    <string name="americaHaveFreedomWithInterner">America: Have Freedom</string>
    <string name="thatsEnoughFreedom">That\'s Engough Freedom</string>
    <string name="noReligion">No Religion</string>
    <string name="americaHaveAFamily">America: Hava a Family</string>
    <string name="inputAge">Input Age e.g. \"13\"</string>
    <string name="americaNeedsToKnowYourAgeBeforeThisNextFreedom">America: ...The eGuide Needs to Know Your Age Before This Next Freedom</string>
    <string name="americaRedscare">AMERICA: REDSCARE</string>
    <string name="saveAmerica">Save America by Hitting todolos scary images (Chjina)</string>
    <string name="nowSaveOutFuture">Now Save our Future!</string>
</resources>
