<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/american_flag"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:background="@android:color/transparent"
        android:text="@string/womenWearingHandkerchief"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="305dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/manWearingTurban"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/americaTheeGuideTextViewID"
        android:layout_width="442dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/americaTheEGuide"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/darker_gray"
        android:textSize="52sp"
        app:fontFamily="@font/lobster"
        app:layout_constraintBottom_toTopOf="@+id/notClickBaitTextViewID"
        app:layout_constraintEnd_toEndOf="@+id/notClickBaitTextViewID"
        app:layout_constraintStart_toStartOf="@+id/notClickBaitTextViewID"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/proceedToNextPageImageButtonID"
        android:layout_width="49dp"
        android:layout_height="35dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="@+id/notClickBaitTextViewID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/notClickBaitTextViewID"
        app:layout_constraintTop_toTopOf="@+id/notClickBaitTextViewID"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/notClickBaitTextViewID"
        android:layout_width="590dp"
        android:layout_height="68dp"
        android:text="@string/beginAmericanization"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/proceedToNextPageImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/americaTheeGuideTextViewID" />

    <TextView
        android:id="@+id/identityStatusTextViewID"
        android:layout_width="94dp"
        android:layout_height="88dp"
        android:text="@string/manWearingTurban"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="606dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/manWearingTurban"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

</androidx.constraintlayout.widget.ConstraintLayout>