<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/american_flag"
    tools:context=".GetAPlaceToLive">

    <TextView
        android:id="@+id/americaTheeGuideTextViewID7"
        android:layout_width="660dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/americaHomeSweetHomeQuestionMark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/darker_gray"
        android:textSize="52sp"
        app:fontFamily="@font/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <ImageButton
        android:id="@+id/liveWithParentsImageButtonID"
        android:layout_width="233dp"
        android:layout_height="138dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/getAHouseImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/americaTheeGuideTextViewID7"
        app:srcCompat="@drawable/adultlivingathome" />

    <ImageButton
        android:id="@+id/communiyHousingImageButtonID"
        android:layout_width="235dp"
        android:layout_height="136dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/getAHouseImageButtonID"
        app:layout_constraintTop_toBottomOf="@+id/americaTheeGuideTextViewID7"
        app:srcCompat="@drawable/cohousingcommunity" />

    <ImageButton
        android:id="@+id/getAHouseImageButtonID"
        android:layout_width="245dp"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/communiyHousingImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/liveWithParentsImageButtonID"
        app:layout_constraintTop_toBottomOf="@+id/americaTheeGuideTextViewID7"
        app:srcCompat="@drawable/amansion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:fontFamily="@font/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/liveWithParentsImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/liveWithParentsImageButtonID"
        app:layout_constraintTop_toBottomOf="@+id/liveWithParentsImageButtonID"
        tools:text="@string/withParents" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:contentDescription="@string/cohousing"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:fontFamily="@font/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/communiyHousingImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/communiyHousingImageButtonID"
        app:layout_constraintTop_toBottomOf="@+id/communiyHousingImageButtonID"
        tools:text="@string/cohousing" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:fontFamily="@font/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/getAHouseImageButtonID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/getAHouseImageButtonID"
        app:layout_constraintTop_toBottomOf="@+id/getAHouseImageButtonID"
        tools:text="@string/aHouse" />
</androidx.constraintlayout.widget.ConstraintLayout>